--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #090c12, #ffcad3, #090c12, #24344e, #ffcad3
-rofi.color-urgent:                   #090c12, #d6b48d, #22231D, #d6b48d, #ffcad3
-rofi.color-active:                   #090c12, #2e4162, #090c12, #2e4162, #090c12
-rofi.color-window:                   #090c12, #24344e, #192335
+rofi.color-normal:                   #0d0f1a, #f2f2ff, #0d0f1a, #3c4c99, #f2f2ff
+rofi.color-urgent:                   #0d0f1a, #d6b48d, #22231D, #d6b48d, #f2f2ff
+rofi.color-active:                   #0d0f1a, #8f96ec, #0d0f1a, #8f96ec, #0d0f1a
+rofi.color-window:                   #0d0f1a, #3c4c99, #293469
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
