--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -31,6 +31,7 @@
         "spacing": 2
     },
     "clock": {
+        "format": "{:%a %d %b  %H:%M}",
         "format-alt": "{:%Y-%m-%d}"
     },
     "cpu": {
@@ -53,7 +54,7 @@
     },
     "network": {
         // "interface": "wlp2s0", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-wifi": "{essid} ",
         "format-ethernet": "eth: {ipaddr} ",
         "format-disconnected": "Disconnected ⚠"
     },
