--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -105,7 +105,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 11.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -175,7 +175,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.8
+background_opacity: 0.75
 
 # Mouse bindings
 #
@@ -488,30 +488,31 @@ key_bindings:
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                      }
   - { key: NumpadEnter,             chars: "\n"                              }
 
-# Colors (Pencil Dark)
+# insignificato, terminal.sexy
 colors:
-  # Default Colors
+  # Default colors
   primary:
-    background: '0x212121'
-    foreground: '0xf1f1f1'
+    background: '0x000000'
+    foreground: '0xaeafb0'
+
   # Normal colors
   normal:
-    black:   '0x212121'
-    red:     '0xc30771'
-    green:   '0x10a778'
-    yellow:  '0xa89c14'
-    blue:    '0x008ec4'
-    magenta: '0x523c79'
-    cyan:    '0x20a5ba'
-    white:   '0xe0e0e0'
+    black:   '0x3d3e3d'
+    red:     '0x755a5b'
+    green:   '0x68755a'
+    yellow:  '0x756e5a'
+    blue:    '0x5b6976'
+    magenta: '0x755b76'
+    cyan:    '0x5b7674'
+    white:   '0x808080'
+
   # Bright colors
   bright:
-    black:   '0x212121'
-    red:     '0xfb007a'
-    green:   '0x5fd7af'
-    yellow:  '0xf3e430'
-    blue:    '0x20bbfc'
-    magenta: '0x6855de'
-    cyan:    '0x4fb8cc'
-    white:   '0xf1f1f1'
-
+    black:   '0x5a5b5c'
+    red:     '0xa37679'
+    green:   '0x87a376'
+    yellow:  '0xa39b76'
+    blue:    '0x758ba3'
+    magenta: '0x9f76a3'
+    cyan:    '0x75a3a1'
+    white:   '0xaeafb0'
