--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #0d0f1a, #f2f2ff, #0d0f1a, #3c4c99, #f2f2ff
-rofi.color-urgent:                   #0d0f1a, #d6b48d, #22231D, #d6b48d, #f2f2ff
-rofi.color-active:                   #0d0f1a, #8f96ec, #0d0f1a, #8f96ec, #0d0f1a
-rofi.color-window:                   #0d0f1a, #3c4c99, #293469
+rofi.color-normal:                   #141414, #deddd4, #141414, #41465d, #deddd4
+rofi.color-urgent:                   #141414, #d6b48d, #22231D, #d6b48d, #deddd4
+rofi.color-active:                   #141414, #9cc290, #141414, #9cc290, #141414
+rofi.color-window:                   #141414, #41465d, #2d3040
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
