chore: use Manrope as default sans-serif font everywhere

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -90,9 +90,9 @@ fc-match -s monospace
 		<test qual="any" name="family">
 			<string>sans-serif</string>
 		</test>
-		<!-- Make Open Sans the first result -->
+		<!-- Make Manrope the first result -->
 		<edit name="family" mode="prepend_first">
-			<string>Open Sans</string>
+			<string>Manrope</string>
 		</edit>
 		<!-- Followed by Noto Emoji Color -->
 		<edit name="family" mode="prepend_first">
