--- a/.config/wpg/schemes/_home_j__config_wpg_wallpapers_wallhaven-766er3_jpg_dark_wal__1.1.0.json
+++ b/.config/wpg/schemes/_home_j__config_wpg_wallpapers_wallhaven-766er3_jpg_dark_wal__1.1.0.json
@@ -3,26 +3,26 @@
     "alpha": "100",
 
     "special": {
-        "background": "#242e32",
-        "foreground": "#c4c4b5",
-        "cursor": "#c4c4b5"
+        "background": "#1c1f23",
+        "foreground": "#e3e0db",
+        "cursor": "#e3e0db"
     },
     "colors": {
-        "color0": "#242e32",
-        "color1": "#a66959",
-        "color2": "#769070",
-        "color3": "#ac8d6e",
-        "color4": "#607a86",
-        "color5": "#8a757e",
-        "color6": "#60867f",
-        "color7": "#c4c4b5",
-        "color8": "#35444b",
-        "color9": "#a66959",
-        "color10": "#769070",
-        "color11": "#ac8d6e",
-        "color12": "#607a86",
-        "color13": "#8a757e",
-        "color14": "#60867f",
-        "color15": "#c4c4b5"
+        "color0": "#1c1f23",
+        "color1": "#234640",
+        "color2": "#555552",
+        "color3": "#7e6b5f",
+        "color4": "#384758",
+        "color5": "#444d4d",
+        "color6": "#415459",
+        "color7": "#ccc7bf",
+        "color8": "#33383f",
+        "color9": "#234640",
+        "color10": "#555552",
+        "color11": "#7e6b5f",
+        "color12": "#384758",
+        "color13": "#444d4d",
+        "color14": "#415459",
+        "color15": "#e3e0db"
     }
 }
