--- a/.config/wpg/schemes/_home_j__config_wpg_wallpapers_wallhaven-wyv2w7_png_dark_wal__1.1.0.json
+++ b/.config/wpg/schemes/_home_j__config_wpg_wallpapers_wallhaven-wyv2w7_png_dark_wal__1.1.0.json
@@ -3,26 +3,26 @@
     "alpha": "100",
 
     "special": {
-        "background": "#272733",
-        "foreground": "#d5d1c6",
-        "cursor": "#d5d1c6"
+        "background": "#263238",
+        "foreground": "#FFFFFF",
+        "cursor": "#FFFFFF"
     },
     "colors": {
-        "color0": "#272733",
-        "color1": "#d65f2f",
-        "color2": "#aabf7f",
-        "color3": "#dabe72",
-        "color4": "#5e7e9b",
-        "color5": "#bf6c68",
-        "color6": "#5a7273",
-        "color7": "#cac5b7",
-        "color8": "#48485e",
-        "color9": "#d65f2f",
-        "color10": "#aabf7f",
-        "color11": "#dabe72",
-        "color12": "#5e7e9b",
-        "color13": "#bf6c68",
-        "color14": "#5a7273",
-        "color15": "#d5d1c6"
+        "color0": "#263238",
+        "color1": "#F07178",
+        "color2": "#C3E88D",
+        "color3": "#FFCB6B",
+        "color4": "#82AAFF",
+        "color5": "#C792EA",
+        "color6": "#89DDFF",
+        "color7": "#EEFFFF",
+        "color8": "#546E7A",
+        "color9": "#F07178",
+        "color10": "#C3E88D",
+        "color11": "#FFCB6B",
+        "color12": "#82AAFF",
+        "color13": "#C792EA",
+        "color14": "#89DDFF",
+        "color15": "#FFFFFF"
     }
 }
