--- a/.config/wpg/wpg.conf
+++ b/.config/wpg/wpg.conf
@@ -1,14 +1,16 @@
 [settings]
 set_wallpaper = true
 gtk = true
-active = 0
-light_theme = false
+active = 1
+light_theme = true
 editor = urxvt -e vim
 execute_cmd = false
 command = urxvt -e echo hi
 backend = wal
 alpha = 100
 smart_sort = true
-auto_adjust = false
+auto_adjust = true
+vte = true
 
 [keywords]
+
