chore: migrate to kitty; darken all the things

--- a/.config/wpg/wpg.conf
+++ b/.config/wpg/wpg.conf
@@ -2,7 +2,7 @@
 set_wallpaper = true
 gtk = true
 active = 1
-light_theme = true
+light_theme = false
 editor = urxvt -e vim
 execute_cmd = false
 command = urxvt -e echo hi
@@ -11,6 +11,7 @@ alpha = 100
 smart_sort = true
 auto_adjust = true
 vte = true
+reload = true
 
 [keywords]
 
