--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #1c2023, #f3f4f5, #1c2023, #9f8b77, #f3f4f5
-rofi.color-urgent:                   #1c2023, #d6b48d, #22231D, #d6b48d, #f3f4f5
-rofi.color-active:                   #1c2023, #95aec7, #1c2023, #95aec7, #1c2023
-rofi.color-window:                   #1c2023, #9f8b77, #6d5f52
+rofi.color-normal:                   #101010, #f7f7f7, #101010, #636363, #f7f7f7
+rofi.color-urgent:                   #101010, #d6b48d, #22231D, #d6b48d, #f7f7f7
+rofi.color-active:                   #101010, #868686, #101010, #868686, #101010
+rofi.color-window:                   #101010, #636363, #444444
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
