--- a/.local/share/applications/Zoom-X11.desktop
+++ b/.local/share/applications/Zoom-X11.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Zoom (Force X11)
 Comment=Zoom Video Conference
-Exec=/home/j/bin/zoom %U
+Exec=env QT_QPA_PLATFORM= flatpak run us.zoom.Zoom %U
 Icon=Zoom
 Terminal=false
 Type=Application
