--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,6 @@
 {
+  "coc.preferences.hoverTarget": "echo",
+  "signature.target": "echo",
   "languageserver": {
     "haskell": {
       "args": [
