--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #101010, #f7f7f7, #101010, #636363, #f7f7f7
-rofi.color-urgent:                   #101010, #d6b48d, #22231D, #d6b48d, #f7f7f7
-rofi.color-active:                   #101010, #868686, #101010, #868686, #101010
-rofi.color-window:                   #101010, #636363, #444444
+rofi.color-normal:                   #0D1616, #ffccbd, #0D1616, #871818, #ffccbd
+rofi.color-urgent:                   #0D1616, #d6b48d, #22231D, #d6b48d, #ffccbd
+rofi.color-active:                   #0D1616, #c3262d, #0D1616, #c3262d, #0D1616
+rofi.color-window:                   #0D1616, #871818, #5d1010
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
