--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -65,7 +65,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: Iosevka Term
+    family: PragmataPro Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -163,35 +163,39 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+background_opacity: 0.9
 
+# bitmute from xcolors.net, then modified
 colors:
   # Default colors
   primary:
+    # background: '0x000000'
+    # foreground: '0xffffff'
+    #background: '#282828'
     background: '#101010'
-    foreground: '#b9b9b9'
+    foreground: '#aeaeae'
 
   # Normal colors
   normal:
-    black:   '#101010'
-    red:     '#7c7c7c'
-    green:   '#8e8e8e'
-    yellow:  '#a0a0a0'
-    blue:    '#686868'
-    magenta: '#747474'
-    cyan:    '#868686'
-    white:   '#b9b9b9'
+    black:   '0x282828'
+    red:     '0xb76969'
+    green:   '0x719d72'
+    yellow:  '0x909858'
+    blue:    '0x68668f'
+    magenta: '0x966894'
+    cyan:    '0x688891'
+    white:   '0x8e8e8e'
 
   # Bright colors
   bright:
-    black:   '#525252'
-    red:     '#7c7c7c'
-    green:   '#8e8e8e'
-    yellow:  '#a0a0a0'
-    blue:    '#686868'
-    magenta: '#747474'
-    cyan:    '#868686'
-    white:   '#f7f7f7'
+    black:   '0x494949'
+    red:     '0xb87e7e'
+    green:   '0x839d84'
+    yellow:  '0x919864'
+    blue:    '0x73718f'
+    magenta: '0x987397'
+    cyan:    '0x758c93'
+    white:   '0xaeaeae'
 
 # Mouse bindings
 #
