the firefox webcam overlay thing is annoying as hell when it forces a re-tile - force-float it instead

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -254,6 +254,7 @@ include ~/.config/sway/`hostname`.config
 
 # Eliminate titlebars
 for_window [title="^.*"] border pixel 1
+for_window [title="Firefox - Sharing Indicator"] floating enable
 
 # this... doesn't seem to work on a fresh musl-based void install?
 exec_always import-gsettings \
