chore: moved desktop back to gentoo; here's some stuff

--- a/etc/portage/antarctica.make.conf
+++ b/etc/portage/antarctica.make.conf
@@ -27,12 +27,48 @@ PKGDIR="/var/cache/binpkgs"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-USE="-systemd -networkmanager -consolekit dbus elogind alsa jack X wayland d3d9 lm-sensors vulkan ffmpeg python unicode evdev libinput policykit zsh-completion pulseaudio gles opengl kms libsamplerate ao realtime libressl threads opus theora vorbis logrotate truetype vdpau vaapi pcsc-lite jpeg"
-CURL_SSL="libressl"
+USE="
+-systemd
+-networkmanager
+-consolekit
+dbus
+elogind
+alsa
+jack
+pulseaudio
+pipewire
+X
+wayland
+d3d9
+lm-sensors
+vulkan
+ffmpeg
+python
+unicode
+evdev
+libinput
+policykit
+zsh-completion
+gles
+opengl
+kms
+libsamplerate
+ao
+realtime
+threads
+opus
+theora
+vorbis
+logrotate
+truetype
+vdpau
+vaapi
+pcsc-lite
+jpeg
+"
 
 ACCEPT_LICENSE="@BINARY-REDISTRIBUTABLE @FSF-APPROVED-OTHER"
 L10N="en"
 GRUB_PLATFORMS="efi-64"
-RUBY_TARGETS="ruby25"
 
 GENTOO_MIRRORS="https://gentoo.osuosl.org/"
