update fonts all around

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,48 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
-<!--
-Noto Emoji Color SVGinOT Font
-Fontconfig fonts.conf for a Noto default
-
-https://github.com/eosrei/emojione-color-font
-This font.conf makes Noto the default font for Serif, Sans-Serif,
-and Monospace font requests since it does not contain any Unicode Emoji
-characters. Noto Emoji Color font is the first fallback, followed by DejaVu
-(or whatever the existing default is) to provide everything else.
-
-Install required fonts with:
-sudo apt-get install ttf-bitstream-vera
-
-Test with:
-fc-match -s serif
-fc-match -s sans-serif
-fc-match -s monospace
--->
 <fontconfig>
 	<match target="scan">
 		<test name="family">
-			<string>Noto Color Emoji</string>
+			<string>Twitter Color Emoji</string>
 		</test>
 		<edit name="scalable" mode="assign">
 			<bool>true</bool>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="prgname">
-			<string>chromium</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>Noto Color Emoji</string>
-		</edit>
-	</match>
-
-	<match target="pattern">
-		<test name="prgname">
-			<string>iridium</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>Noto Color Emoji</string>
 		</edit>
 	</match>
 
@@ -77,11 +41,11 @@ fc-match -s monospace
 		</test>
 		<!-- Make Noto Serif the first result -->
 		<edit name="family" mode="prepend_first">
-			<string>Noto Serif</string>
+			<string>PT Serif</string>
 		</edit>
-		<!-- Followed by Noto Emoji Color -->
+		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
-			<string>Noto Emoji Color</string>
+			<string>Twitter Color Emoji</string>
 		</edit>
 	</match>
 
@@ -92,11 +56,11 @@ fc-match -s monospace
 		</test>
 		<!-- Make Manrope the first result -->
 		<edit name="family" mode="prepend_first">
-			<string>Manrope</string>
+			<string>PT Sans</string>
 		</edit>
-		<!-- Followed by Noto Emoji Color -->
+		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
-			<string>Noto Emoji Color</string>
+			<string>Twitter Color Emoji</string>
 		</edit>
 	</match>
 
@@ -109,34 +73,34 @@ fc-match -s monospace
 			<string>FSD Emoji</string>
 		</edit>
 		<edit name="family" mode="prepend_first">
-			<string>Iosevka Term</string>
+			<string>PragmataPro</string>
 		</edit>
-		<!-- Followed by Noto Emoji Color -->
+		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
-			<string>Noto Emoji Color</string>
+			<string>Twitter Color Emoji</string>
 		</edit>
 	</match>
 
 <!-- Add emoji generic family -->
   <alias binding="strong">
 	  <family>emoji</family>
-	  <default><family>Noto Emoji Color</family></default>
+	  <default><family>Twitter Color Emoji</family></default>
   </alias>
 
   <!-- Alias requests for the other emoji fonts -->
   <alias binding="strong">
 	  <family>Apple Color Emoji</family>
-	  <prefer><family>Noto Emoji Color</family></prefer>
+	  <prefer><family>Twitter Color Emoji</family></prefer>
 	  <default><family>sans-serif</family></default>
   </alias>
   <alias binding="strong">
 	  <family>Segoe UI Emoji</family>
-	  <prefer><family>Noto Emoji Color</family></prefer>
+	  <prefer><family>Twitter Color Emoji</family></prefer>
 	  <default><family>sans-serif</family></default>
   </alias>
   <alias binding="strong">
 	  <family>Emoji One Color</family>
-	  <prefer><family>Noto Emoji Color</family></prefer>
+	  <prefer><family>Twitter Color Emoji</family></prefer>
 	  <default><family>sans-serif</family></default>
   </alias>
 </fontconfig>
