various portage configs

--- a/etc/portage/antarctica.make.conf
+++ b/etc/portage/antarctica.make.conf
@@ -31,40 +31,41 @@ USE="
 -systemd
 -networkmanager
 -consolekit
+X
+alsa
+ao
+d3d9
 dbus
 elogind
-alsa
-jack
-pulseaudio
-pipewire
-X
-wayland
-d3d9
-lm-sensors
-vulkan
-ffmpeg
-python
-unicode
 evdev
-libinput
-policykit
-zsh-completion
+ffmpeg
 gles
-opengl
-kms
-libsamplerate
-ao
-realtime
-threads
-opus
-theora
-vorbis
-logrotate
-truetype
-vdpau
-vaapi
-pcsc-lite
+jack
 jpeg
+kms
+libinput
+libsamplerate
+lm-sensors
+logrotate
+opengl
+opus
+pcsc-lite
+pipewire
+png
+policykit
+pulseaudio
+python
+realtime
+theora
+threads
+truetype
+unicode
+vaapi
+vdpau
+vorbis
+vulkan
+wayland
+zsh-completion
 "
 
 ACCEPT_LICENSE="@BINARY-REDISTRIBUTABLE @FSF-APPROVED-OTHER"
