--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -34,3 +34,8 @@ sync-uri = https://github.com/gentoo-mirror/nest.git
 location = /var/db/repos/jorgicio
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/jorgicio.git
+
+[ricerlay]
+location = /var/db/repos/ricerlay
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/ricerlay.git
