--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -39,3 +39,8 @@ sync-uri = https://github.com/gentoo-mirror/jorgicio.git
 location = /var/db/repos/ricerlay
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/ricerlay.git
+
+[menelkir]
+location = /var/db/repos/menelkir
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/menelkir.git
