--- a/etc/portage/repos.conf/gentoo.conf
+++ b/etc/portage/repos.conf/gentoo.conf
@@ -2,13 +2,17 @@
 main-repo = gentoo
 
 [gentoo]
+#location = /var/db/repos/gentoo
+#sync-type = rsync
+#sync-uri = rsync://rsync.gentoo.org/gentoo-portage
+#auto-sync = yes
+#sync-rsync-verify-jobs = 1
+#sync-rsync-verify-metamanifest = yes
+#sync-rsync-verify-max-age = 24
 location = /var/db/repos/gentoo
-sync-type = rsync
-sync-uri = rsync://rsync.gentoo.org/gentoo-portage
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/gentoo
 auto-sync = yes
-sync-rsync-verify-jobs = 1
-sync-rsync-verify-metamanifest = yes
-sync-rsync-verify-max-age = 24
 sync-openpgp-key-path = /usr/share/openpgp-keys/gentoo-release.asc
 sync-openpgp-keyserver = hkps://keys.gentoo.org
 sync-openpgp-key-refresh-retry-count = 40
