--- a/.config/wpg/wpg.conf
+++ b/.config/wpg/wpg.conf
@@ -6,7 +6,7 @@ light_theme = false
 editor = urxvt -e vim
 execute_cmd = false
 command = urxvt -e echo hi
-backend = wal
+backend = schemer2
 alpha = 100
 smart_sort = true
 auto_adjust = true
