--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -166,34 +166,42 @@ visual_bell:
 # The value `0.0` is completely transparent and `1.0` is opaque.
 background_opacity: 0.95
 
-# x-erosion by earsplit
+# Base16 iA Dark - alacritty color config
+# iA Inc. (modified by aramisgithub)
 colors:
   # Default colors
   primary:
-    background: '0x181512'
-    foreground: '0xbea492'
+    background: '0x1a1a1a'
+    foreground: '0xcccccc'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0x1a1a1a'
+    cursor: '0xcccccc'
 
   # Normal colors
   normal:
-    black:   '0x332d29'
-    red:     '0x8c644c'
-    green:   '0x746c48'
-    yellow:  '0x908a66'
-    blue:    '0x646a6d'
-    magenta: '0x605655'
-    cyan:    '0x4b5c5e'
-    white:   '0x504339'
+    black:   '0x1a1a1a'
+    red:     '0xd88568'
+    green:   '0x83a471'
+    yellow:  '0xb99353'
+    blue:    '0x8eccdd'
+    magenta: '0xb98eb2'
+    cyan:    '0x7c9cae'
+    white:   '0xcccccc'
 
   # Bright colors
   bright:
-    black:   '0x817267'
-    red:     '0x9f7155'
-    green:   '0x857b52'
-    yellow:  '0x9c956e'
-    blue:    '0x71777a'
-    magenta: '0x656565'
-    cyan:    '0x556d70'
-    white:   '0x9a875f'
+    black:   '0x767676'
+    red:     '0xd86868'
+    green:   '0x222222'
+    yellow:  '0x1d414d'
+    blue:    '0xb8b8b8'
+    magenta: '0xe8e8e8'
+    cyan:    '0x8b6c37'
+    white:   '0xf8f8f8'
+
+# draw_bold_text_with_bright_colors: false
 
 # Mouse bindings
 #
