--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -154,7 +154,7 @@ draw_bold_text_with_bright_colors: false
 #   - Linear
 #
 # Specifying a `duration` of `0` will disable the visual bell.
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
   # use bright black here so it's not a complete blinding FFFFFF thing
@@ -164,44 +164,36 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.95
+background_opacity: 1.0
 
-# Base16 iA Dark - alacritty color config
-# iA Inc. (modified by aramisgithub)
+# https://github.com/eendroroy/alacritty-theme/blob/master/themes/thelovelace.yaml
 colors:
-  # Default colors
-  primary:
-    background: '0x1a1a1a'
-    foreground: '0xcccccc'
+    # Default colors
+    primary:
+        background: '0x1D1F28'
+        foreground: '0xFDFDFD'
 
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x1a1a1a'
-    cursor: '0xcccccc'
-
-  # Normal colors
-  normal:
-    black:   '0x1a1a1a'
-    red:     '0xd88568'
-    green:   '0x83a471'
-    yellow:  '0xb99353'
-    blue:    '0x8eccdd'
-    magenta: '0xb98eb2'
-    cyan:    '0x7c9cae'
-    white:   '0xcccccc'
-
-  # Bright colors
-  bright:
-    black:   '0x767676'
-    red:     '0xd86868'
-    green:   '0x222222'
-    yellow:  '0x1d414d'
-    blue:    '0xb8b8b8'
-    magenta: '0xe8e8e8'
-    cyan:    '0x8b6c37'
-    white:   '0xf8f8f8'
-
-# draw_bold_text_with_bright_colors: false
+    # Normal colors
+    normal:
+    # Bright colors
+        black:   '0x282A36'
+        red:     '0xF37F97'
+        green:   '0x5ADECD'
+        yellow:  '0xF2A272'
+        blue:    '0x8897F4'
+        magenta: '0xC574DD'
+        cyan:    '0x79E6F3'
+        white:   '0xFDFDFD'
+    bright:
+        black:   '0x414458'
+        red:     '0xFF4971'
+        green:   '0x18E3C8'
+        yellow:  '0xEBCB8B'
+        blue:    '0xFF8037'
+        magenta: '0x556FFF'
+        cyan:    '0x3FDCEE'
+        white:   '0xBEBEC1'
+    indexed_colors: []
 
 # Mouse bindings
 #
