--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -13,6 +13,9 @@ env: {}
   # TERM: xterm-256color
 
 window:
+  # Allow terminal applications to change Alacritty's window title.
+  dynamic_title: true
+
   # Window dimensions (changes require restart)
   #
   # Specified in number of columns/lines, not pixels.
@@ -171,7 +174,9 @@ colors:
     # Default colors
     primary:
         background: '0x1D1F28'
-        foreground: '0xFDFDFD'
+        #foreground: '0xFDFDFD'
+        # emdimmen!
+        foreground:   '0xBEBEC1'
 
     # Normal colors
     normal:
@@ -250,9 +255,6 @@ selection:
 
   # When set to `true`, selected text will be copied to the primary clipboard.
   save_to_clipboard: false
-
-# Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
 
 cursor:
   # Cursor style
