--- a/.config/sway/config
+++ b/.config/sway/config
@@ -93,8 +93,8 @@ input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
 # input 1046:49512:TSTP_MTouch map_to_output DP-3
 
 ### Key bindings
-bindsym XF86AudioRaiseVolume exec pulsemixer --change-volume +2
-bindsym XF86AudioLowerVolume exec pulsemixer --change-volume -2
+bindsym XF86AudioRaiseVolume exec pulsemixer --change-volume +2 --max-volume 100
+bindsym XF86AudioLowerVolume exec pulsemixer --change-volume -2 --max-volume 100
 bindsym XF86AudioMute exec pulsemixer --toggle-mute
 bindsym XF86MonBrightnessUp exec brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
