--- a/.config/sway/config
+++ b/.config/sway/config
@@ -40,8 +40,7 @@ set $right l
 # Your preferred terminal emulator
 set $term alacritty
 # Your preferred application launcher
-set $menu rofi -modi combi -show combi -combi-modi drun,run -font "Noto Sans 11" -bw 0 -separator-style solid
-# j4-dmenu-desktop --dmenu="bemenu -i"
+set $menu wofi -Imi -t alacritty --show drun,run -p 'Run:'
 
 gaps outer 8
 gaps inner 8
@@ -51,7 +50,6 @@ seat seat0 hide_cursor 5000
 
 ### Output configuration
 output * bg /home/j/.wallpaper fill
-#output * bg '#181512' solid_color
 
 ### Input configuration
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
