--- a/etc/portage/devotee.make.conf
+++ b/etc/portage/devotee.make.conf
@@ -2,7 +2,17 @@
 # built this stage.
 # Please consult /usr/share/portage/config/make.conf.example for a more
 # detailed example.
-COMMON_FLAGS="-O2 -pipe -march=native -mtune=native"
+
+# thanks, https://blogs.gentoo.org/mgorny/2014/06/23/inlining-marchnative-for-distcc/
+COMMON_FLAGS="-O2 -pipe"
+COMMON_FLAGS="${COMMON_FLAGS} -march=skylake -mmmx -msse -msse2 -msse3 -mssse3"
+COMMON_FLAGS="${COMMON_FLAGS} -mcx16 -msahf -mmovbe -maes -mpclmul -mpopcnt -mabm"
+COMMON_FLAGS="${COMMON_FLAGS} -mfma -mbmi -msgx -mbmi2 -mavx -mavx2 -msse4.2 -msse4.1"
+COMMON_FLAGS="${COMMON_FLAGS} -mlzcnt -mrdrnd -mf16c -mfsgsbase -mrdseed -mprfchw -madx"
+COMMON_FLAGS="${COMMON_FLAGS} -mfxsr -mxsave -mxsaveopt -mclflushopt -mxsavec -mxsaves"
+COMMON_FLAGS="${COMMON_FLAGS} --param l1-cache-size=32 --param l1-cache-line-size=64"
+COMMON_FLAGS="${COMMON_FLAGS} --param l2-cache-size=6144 -mtune=skylake"
+
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
@@ -12,11 +22,12 @@ LDFLAGS="-Wl,-O2 -Wl,--as-needed"
 VIDEO_CARDS="intel i965"
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
-MAKEOPTS="-j9"
+MAKEOPTS="-j25 -l8"
 PORTAGE_NICENESS="19"
 INPUT_DEVICES="libinput"
 
-EMERGE_DEFAULT_OPTS="--jobs=9 --load-average=9"
+EMERGE_DEFAULT_OPTS="--jobs=9 --load-average=7"
+FEATURES="distcc"
 
 # NOTE: This stage was built with the bindist Use flag enabled
 PORTDIR="/var/db/repos/gentoo"
@@ -27,14 +38,12 @@ PKGDIR="/var/cache/binpkgs"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-USE="-systemd -networkmanager -consolekit dbus elogind alsa jack X wayland lm-sensors vulkan ffmpeg python unicode evdev libinput policykit zsh-completion pulseaudio gles opengl kms libsamplerate ao realtime libressl threads opus theora vorbis logrotate truetype vdpau vaapi pcsc-lite jpeg png svg"
-CURL_SSL="libressl"
+USE="-systemd -networkmanager -consolekit -libressl dbus elogind alsa jack X wayland lm-sensors vulkan ffmpeg python unicode evdev libinput policykit zsh-completion pulseaudio gles opengl kms libsamplerate ao realtime threads opus theora vorbis logrotate truetype vdpau vaapi pcsc-lite jpeg png svg"
 
 ACCEPT_LICENSE="@BINARY-REDISTRIBUTABLE @FSF-APPROVED-OTHER"
 L10N="en"
 GRUB_PLATFORMS="efi-64"
 
-PYTHON_TARGETS="${PYTHON_TARGETS} python3_8"
-RUBY_TARGETS="ruby25"
+PYTHON_TARGETS="${PYTHON_TARGETS} python3_9"
 
 GENTOO_MIRRORS="https://gentoo.osuosl.org/"
