feat(vim): lang support etc

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -20,6 +20,18 @@
 				"languageServerHaskell": {
 				}
 			}
+		},
+		"purescript": {
+			"command": "purescript-language-server",
+			"args": ["--stdio"],
+			"filetypes": ["purescript"],
+			"trace.server": "off",
+			"rootPatterns": ["bower.json", "psc-package.json", "spago.dhall"],
+			"settings": {
+				"purescript": {
+					"addSpagoSources": true
+				}
+			}
 		}
 	},
 	"suggest.noselect": true
