--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -39,3 +39,29 @@ sync-uri = https://github.com/gentoo-mirror/jorgicio.git
 location = /var/db/repos/ricerlay
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/ricerlay.git
+
+[menelkir]
+location = /var/db/repos/menelkir
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/menelkir.git
+
+[libressl]
+location = /var/db/repos/libressl
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/libressl.git
+
+[pf4public]
+location = /var/db/repos/pf4public
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/pf4public.git
+
+[guru]
+location = /var/db/repos/guru
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/guru.git
+
+
+[bobwya]
+location = /var/db/repos/bobwya
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/bobwya.git
