--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -73,7 +73,7 @@
 			<string>FSD Emoji</string>
 		</edit>
 		<edit name="family" mode="prepend_first">
-			<string>Cascadia Code</string>
+			<string>MonoLisa</string>
 		</edit>
 		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
