--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=FlatColor
+gtk-theme-name=Ayu-Dark
 gtk-icon-theme-name=Arc
 gtk-font-name=PT Sans 11
 gtk-cursor-theme-size=0
