--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,57 +1,33 @@
 # Read `man 5 sway` for a complete reference.
 
-### Variables
-set $color-foreground '#ded8d7'
-set $color-background '#152733'
-set $color-cursorColor '#ded8d7'
-
-set $base00 '#24455b'
-set $base01 '#ff777a'
-set $base02 '#d97a9b'
-set $base03 '#ffba95'
-set $base04 '#4684ae'
-set $base05 '#325f7d'
-set $base06 '#c7bcba'
-set $base07 '#dfd9d8'
-set $base08 '#24455b'
-set $base09 '#ff777a'
-set $base0A '#d97a9b'
-set $base0B '#ffba95'
-set $base0C '#4584ae'
-set $base0D '#325f7d'
-set $base0E '#c7bcba'
-set $base0F '#ded8d7'
-
-# Property Name         Border  BG      Text    Indicator Child Border
-client.focused          $base05 $base0D $base00 $base0D $base06
-client.focused_inactive $base01 $base01 $base05 $base03 $base04
-client.unfocused        $base01 $base00 $base05 $base01 $base00
-client.urgent           $base08 $base08 $base00 $base08 $base08
-client.placeholder      $base00 $base00 $base05 $base00 $base00
-client.background       $base07
+set $colors ayu-dark
 
 # Logo key. Use Mod1 for Alt.
 set $mod Mod4
+
 # Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
-# Your preferred terminal emulator
+
 set $term alacritty
-# Your preferred application launcher
-set $menu wofi -Imi -t alacritty --show drun,run -p 'Run:'
+set $menu wofi -Imi -t $term --show drun,run -p 'Run:'
+set $lockscreen swaylock -c 000000
 
 gaps outer 8
 gaps inner 8
 
 # Hide cursor after 5s of mouse movement
 seat seat0 hide_cursor 5000
+seat seat0 xcursor_theme capitaine-cursors 16
 
 ### Output configuration
-output * bg /home/j/.wallpaper fill
+output * bg ~/.wallpaper fill
 
 ### Input configuration
+# Trackpads and keyboards and such tend to be used across multiple machines, so
+# I throw them in the common config here
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
 input 1:1:AT_Translated_Set_2_keyboard xkb_options caps:backspace
 
@@ -86,16 +62,19 @@ input 1133:16641:Logitech_Rechargeable_Touchpad_T650 natural_scroll enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
 
-# touchscreen tablety monitor, lock its input - this depends on what the output
-# actually is, and this screen isn't currently plugged in to anything
-# input 1046:49512:TSTP_MTouch map_to_output DP-3
+input 1267:12635:ELAN072D:00_04F3:315B_Touchpad accel_profile adaptive
+input 1267:12635:ELAN072D:00_04F3:315B_Touchpad dwt on
+input 1267:12635:ELAN072D:00_04F3:315B_Touchpad middle_emulation enabled
+input 1267:12635:ELAN072D:00_04F3:315B_Touchpad natural_scroll enabled
+input 1267:12635:ELAN072D:00_04F3:315B_Touchpad tap enabled
+input 1267:12635:ELAN072D:00_04F3:315B_Touchpad tap_button_map lrm
 
 ### Key bindings
 bindsym XF86AudioRaiseVolume exec pulsemixer --change-volume +2 --max-volume 100
 bindsym XF86AudioLowerVolume exec pulsemixer --change-volume -2 --max-volume 100
 bindsym XF86AudioMute exec pulsemixer --toggle-mute
-bindsym XF86MonBrightnessUp exec brightnessctl set +10%
-bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
+bindsym XF86MonBrightnessUp exec light -A 10
+bindsym XF86MonBrightnessDown exec light -U 10
 
 #
 # Basics:
@@ -105,7 +84,11 @@ bindsym $mod+Return exec $term
 
 # depends on swaylock-effects{-git}
 # https://github.com/mortie/swaylock-effects
-bindsym $mod+home exec swaylock --screenshots --effect-blur 3x3
+#bindsym $mod+home exec swaylock --screenshots --effect-blur 3x3
+
+# more oled-friendly, and frankly I got tired of dealing with the forked
+# swaylock-effects for now
+bindsym $mod+home exec $lockscreen
 
 # kill focused window
 bindsym $mod+end kill
@@ -115,7 +98,7 @@ bindsym $mod+Space exec $menu
 bindsym $mod+o exec --no-startup-id rofi-ykman
 
 bindsym $mod+s exec ss_full.sh
-bindsym $mod+Shift+s exec ss_window.sh
+bindsym $mod+Shift+s exec ss_selection.sh
 
 
 # Drag floating windows by holding down $mod and left mouse button.
@@ -248,18 +231,24 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-include /etc/sway/config.d/*
-include ~/.config/sway/`hostname`.config
-
 # Eliminate titlebars
 for_window [title="^.*"] border pixel 1
 for_window [title="Firefox - Sharing Indicator"] floating enable
+# ^ seems to have stopped working in v84 because of course it did
 for_window [shell="xwayland"] title_format "%title [XWayland]"
+
+include /etc/sway/config.d/*
+include colors.$colors
+include ~/.config/sway/`hostname`.config
 
 # this... doesn't seem to work on a fresh musl-based void install?
 exec_always import-gsettings \
     gtk-theme:gtk-theme-name \
     icon-theme:gtk-icon-theme-name \
     cursor-theme:gtk-cursor-theme-name
+
+exec swayidle \
+	timeout 300 'swaymsg "output * dpms off"' \
+	resume 'swaymsg "output * dpms on"'
 
 exec sway_services.sh
