--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -60,3 +60,8 @@ sync-uri = https://github.com/gentoo-mirror/guru.git
 location = /var/db/repos/bobwya
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/bobwya.git
+
+[nix-guix]
+location = /var/db/repos/nix-guix
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/nix-guix.git
