theme bump to tokyonight (mostly complete), various other oddities

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -54,9 +54,8 @@
 		<test qual="any" name="family">
 			<string>sans-serif</string>
 		</test>
-		<!-- Make Manrope the first result -->
 		<edit name="family" mode="prepend_first">
-			<string>PT Sans</string>
+			<string>Lato</string>
 		</edit>
 		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
@@ -73,7 +72,7 @@
 			<string>FSD Emoji</string>
 		</edit>
 		<edit name="family" mode="prepend_first">
-			<string>MonoLisa</string>
+			<string>mononoki</string>
 		</edit>
 		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
