--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -72,7 +72,7 @@
 			<string>FSD Emoji</string>
 		</edit>
 		<edit name="family" mode="prepend_first">
-			<string>mononoki</string>
+			<string>Fira Code</string>
 		</edit>
 		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
