--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -12,7 +12,7 @@
 
 	<match target="pattern">
 		<test name="prgname">
-			<string>termite</string>
+			<string>foot</string>
 		</test>
 		<edit name="family" mode="prepend_first">
 			<string>FSD Emoji</string>
@@ -72,7 +72,7 @@
 			<string>FSD Emoji</string>
 		</edit>
 		<edit name="family" mode="prepend_first">
-			<string>Iosevka Term</string>
+			<string>envypn</string>
 		</edit>
 		<!-- Followed by Twitter Color Emoji -->
 		<edit name="family" mode="prepend_first">
